--- a/index.html
+++ b/index.html
@@ -7,34 +7,41 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat&family=Numans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <main>
         <img src="img/bag.png" alt="sacola de compras">
         <form action="">
-            <input type="text" placeholder="DIgite o item que deseja adicionar"/>
-            <button>Salvar item</button>
+            <input class="input-item" id="input-item" type="text" placeholder="DIgite o item que deseja adicionar"/>
+            <button class="adicionar-button" id="adicionar-item">Salvar item</button>
         </form>
 
-        <h2>Lista de compras</h2>
-        <hr>
-
-        <ul>
-            <li>
-                <div>
-                    <div>
-                        <input type="checkbox" name="" id=""/>
-                        <p>Ração de gato</p>
+        <div class="container-lista">
+            <h2>Lista de compras</h2>
+            <hr/>
+            <ul id="lista-de-compras">
+                <li>
+                    <div class="item-lista-container">
+                        <div class="container-nome-compra">
+                            <div class="checkbox-container">
+                                <label for="checkbox-1">
+                                    <input type="checkbox" class="checkbox-input" id="checkbox-1"/>
+                                    <div class="checkbox-customizado checked"></div>
+                                </label>
+                            </div>
+                            <p>Ração de gato</p>
+                        </div>
+                        <div>
+                            <button  class="botao-acao"><img src="img/delete.svg" alt="deletar"></button>
+                            <button  class="botao-acao"><img src="img/edit.svg" alt="editar"></button>
+                        </div>
                     </div>
-                    <div>
-                        <button><img src="img/delete.svg" alt="deletar"></button>
-                        <button><img src="img/edit.svg" alt="editar"></button>
-                    </div>
-                    <p>Segunda-feira(31/10/2022) às 08:30</p>
-                </div>
-            </li>
-        </ul>
+                        <p class="item-lista-texto">Segunda-feira(31/10/2022) às 08:30</p>
+                </li>
+            </ul>
+        </div>
     </main>
+    <script src="js/script.js"></script>
 </body>
 </html>
