criando checkbox dinamico

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             </div>
                             <p>Ração de gato</p>
                         </div>
-                        <div>
+                        <div class="botao-acao">
                             <button  class="botao-acao"><img src="img/delete.svg" alt="deletar"></button>
                             <button  class="botao-acao"><img src="img/edit.svg" alt="editar"></button>
                         </div>
