--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                         <p class="item-lista-texto">Segunda-feira(31/10/2022) às 08:30</p>
                 </li>
             </ul>
+            <h2>Comprados</h2>
+            <hr/>
+            <ul id="lista-comprados">
+
+            </ul>
         </div>
     </main>
     <script src="js/script.js"></script>
