criando funcao para riscar o item que ja foi comprado

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             <h2>Comprados</h2>
             <hr/>
             <ul id="lista-comprados">
-
+                <li id="item-titulo">
+                    
+                </li>
             </ul>
         </div>
     </main>
