--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <button  class="botao-acao"><img src="img/edit.svg" alt="editar"></button>
                         </div>
                     </div>
-                        <p class="item-lista-texto">Segunda-feira(31/10/2022) às 08:30</p>
+                        <p class="texto-data">Segunda-feira(31/10/2022) às 08:30</p>
                 </li>
             </ul>
             <h2>Comprados</h2>
