--- a/index.html
+++ b/index.html
@@ -21,24 +21,8 @@
             <h2>Lista de compras</h2>
             <hr/>
             <ul id="lista-de-compras">
-                <li>
-                    <div class="item-lista-container">
-                        <div class="container-nome-compra">
-                            <div class="checkbox-container">
-                                <label for="checkbox-1">
-                                    <input type="checkbox" class="checkbox-input" id="checkbox-1"/>
-                                    <div class="checkbox-customizado checked"></div>
-                                </label>
-                            </div>
-                            <p>Ração de gato</p>
-                        </div>
-                        <div class="botao-acao">
-                            <button  class="botao-acao"><img src="img/delete.svg" alt="deletar"></button>
-                            <button  class="botao-acao"><img src="img/edit.svg" alt="editar"></button>
-                        </div>
-                    </div>
-                        <p class="texto-data">Segunda-feira(31/10/2022) às 08:30</p>
-                </li>
+                <p id="mensagem-vazia" style="display: block">Sua lista está vazia. Adicione itens a ela para não esquecer nada na próxima compra!</p>
+                
             </ul>
             <h2>Comprados</h2>
             <hr/>
@@ -49,6 +33,6 @@
             </ul>
         </div>
     </main>
-    <script src="js/script.js"></script>
+    <script src="js/script.js" type="module"></script>
 </body>
 </html>
