--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <p id="mensagem-vazia" style="display: block">Sua lista está vazia. Adicione itens a ela para não esquecer nada na próxima compra!</p>
                 
             </ul>
-            <h2>Comprados</h2>
+            <h2 id="titulo-comprados">Comprados</h2>
             <hr/>
             <ul id="lista-comprados">
                 <li id="item-titulo">
