tornando a lista de itens comprados visivel somente quando um conteudo tiver sido comprado

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             <h2>Lista de compras</h2>
             <hr/>
             <ul id="lista-de-compras">
-                <p id="mensagem-vazia" style="display: block">Sua lista está vazia. Adicione itens a ela para não esquecer nada na próxima compra!</p>
+                <p id="mensagem-vazia" style="display: block;">Sua lista está vazia. Adicione itens a ela para não esquecer nada na próxima compra!</p>
                 
             </ul>
-            <h2 id="titulo-comprados">Comprados</h2>
-            <hr/>
-            <ul id="lista-comprados">
-                <li id="item-titulo">
+            <div id="container-lista-comprados" style="display: none;">
+                <h2>Comprados</h2>
+                <hr/>
+                <ul id="lista-comprados">
                     
-                </li>
-            </ul>
+                </ul>
+            </div>
         </div>
     </main>
     <script src="js/script.js" type="module"></script>
