--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <img src="img/bag.png" alt="sacola de compras">
         <form action="">
-            <input class="input-item" id="input-item" type="text" placeholder="DIgite o item que deseja adicionar"/>
+            <input class="input-item" id="input-item" type="text" placeholder="DIgite o item que deseja adicionar" required/>
             <button class="adicionar-button" id="adicionar-item">Salvar item</button>
         </form>
 
